# cc_lab2

./: CMakeLists.txt  inputGramm.json  inputGramm2.json  inputGramm3.json  inputGramm4.json  main.cpp
elimination/: DeletingUnreachableCharacters.cpp  DeletingUnreachableCharacters.h  LeftFactoringElimination.cpp  LeftFactoringElimination.h
gram/: Equation.cpp  Equation.h  GramSymbol.h  Gramatic.cpp  Gramatic.h  NotTerminal.cpp  NotTerminal.h  Terminal.cpp  Terminal.h
regexp/: RegExpression.cpp  RegExpression.h
